# dg-demo

./: .env.example  .gitignore  CLAUDE.md  datahub-quickstart.yml  docker-compose.datahub.yml  lineage_recipe.yaml  pyproject.toml  startup.sh
.hermes/plans/: 2026-06-08_151000-add-neo4j-keep-opensearch.md
docs/: Background.md  Demo.md  Deps.md  Design.md  ELTvsETL.md  Module1.md  Module2.md  Module3.md  Module4.md  Module5.md  Module6.md  Module7.md  Module8.md  Step1.md
notebook/: datahub_setup.ipynb  module1.ipynb  module2.ipynb  module3.ipynb  module4.ipynb  module5.ipynb  module6.ipynb  module7.ipynb  module8.ipynb  step0.ipynb  step1.ipynb
openspec/: config.yaml
scripts/: _build_notebooks.py  _verify_notebooks.py  browse_proxy.py  build_dimension_tables.py  build_dwa_models.py  check_browse.py  datahub-actions.yml  datasets_recipe.yml  debug_bulk.py  delta-lake-ingestion.yaml  demo_asset_visualization.py  direct_es_bulk.py  emit_browsepaths.py  emit_lineage.py  emit_via_rest_emitter.py  es_bulk_update.sh  fix_dataset_aspects.py  fix_datasetkey_v0.py  fix_es_browse.py  fix_es_browsepaths.py  generate_historical.py  generate_incremental.py  gms_rest_api_example.py  ingest_to_deltalake.py  query_lineage.py  recipe_ingest.yml  restore_all.py  restore_es.py  run_great_expectations.py  snapshot_datahub_ui.py  test_aspect.py  verify_datahub_ui.py  verify_es.py  verify_lineage.py
src/dg_education/: __init__.py  business_impact.py  catalog.py  cleaning.py  ge_scan.py  (+3 more)
tests/: conftest.py  test_asset_visualization.py  test_data_profiling.py  test_datahub_client.py
(+122 files in other folders)
